--- a/series.conf
+++ b/series.conf
@@ -8001,6 +8001,7 @@
 	patches.suse/0009-mm-ksm-handle-device-exclusive-entries-correctly-in-.patch
 	patches.suse/0010-mm-rmap-handle-device-exclusive-entries-correctly-in.patch
 	patches.suse/0011-mm-rmap-handle-device-exclusive-entries-correctly-in.patch
+	patches.suse/0012-mm-rmap-handle-device-exclusive-entries-correctly-in.patch
 	patches.suse/mm-simplify-vma-merge-structure-and-expand-comments.patch
 	patches.suse/mm-further-refactor-commit_merge.patch
 	patches.suse/mm-eliminate-adj_start-parameter-from-commit_merge.patch
