--- a/series.conf
+++ b/series.conf
@@ -8005,6 +8005,7 @@
 	patches.suse/0013-mm-page_idle-handle-device-exclusive-entries-correct.patch
 	patches.suse/0014-mm-damon-handle-device-exclusive-entries-correctly-i.patch
 	patches.suse/0015-mm-damon-handle-device-exclusive-entries-correctly-i.patch
+	patches.suse/0016-mm-rmap-keep-mapcount-untouched-for-device-exclusive.patch
 	patches.suse/mm-simplify-vma-merge-structure-and-expand-comments.patch
 	patches.suse/mm-further-refactor-commit_merge.patch
 	patches.suse/mm-eliminate-adj_start-parameter-from-commit_merge.patch
