--- a/series.conf
+++ b/series.conf
@@ -8006,6 +8006,7 @@
 	patches.suse/0014-mm-damon-handle-device-exclusive-entries-correctly-i.patch
 	patches.suse/0015-mm-damon-handle-device-exclusive-entries-correctly-i.patch
 	patches.suse/0016-mm-rmap-keep-mapcount-untouched-for-device-exclusive.patch
+	patches.suse/0017-mm-rmap-avoid-EBUSY-from-make_device_exclusive.patch
 	patches.suse/mm-simplify-vma-merge-structure-and-expand-comments.patch
 	patches.suse/mm-further-refactor-commit_merge.patch
 	patches.suse/mm-eliminate-adj_start-parameter-from-commit_merge.patch
