--- a/series.conf
+++ b/series.conf
@@ -33790,6 +33790,7 @@
 	patches.suse/crypto-qat-use-unmanaged-allocation-for-dc_data.patch
 	patches.suse/crypto-octeontx2-add-timeout-for-load_fvc-completion.patch
 	patches.suse/crypto-marvell-cesa-Fix-engine-load-inaccuracy.patch
+	patches.suse/padata-Fix-pd-UAF-once-and-for-all.patch
 	patches.suse/crypto-qat-allow-enabling-VFs-in-the-absence-of-IOMM.patch
 	patches.suse/crypto-qat-fix-state-restore-for-banks-with-exceptio.patch
 	patches.suse/crypto-arm-aes-neonbs-work-around-gcc-15-warning.patch
