--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1139,3 +1139,4 @@ c94bff63e49302d4ce36502a85a2710a67332a4f # removing exported symbol
 61997c1e947dbf8bc625ef86ceee00fdf2a5dba1 # clang warning
 e7dec0b7926f3cd493c697c4c389df77e8e8a34c # doesn't fix anything
 7278a8fb8d032dfdc03d9b5d17e0bc451cdc1492 # inconsequential optimization
+772e5b4a5e8360743645b9a466842d16092c4f94 # CVE-2025-39775 https://bugzilla.suse.com/show_bug.cgi?id=1249500#c2
