--- a/series.conf
+++ b/series.conf
@@ -34055,6 +34055,7 @@
 	patches.suse/Bluetooth-hci_sync-Avoid-adding-default-advertising-.patch
 	patches.suse/Bluetooth-hci_event-fix-MTU-for-BN-0-in-CIS-Establis.patch
 	patches.suse/Bluetooth-hci_conn-do-return-error-from-hci_enhanced.patch
+	patches.suse/net-gso-Forbid-IPv6-TSO-with-extensions-on-devices-with-on.patch
 	patches.suse/cdc_ncm-Flag-Intel-OEM-version-of-Fibocom-L850-GL-as.patch
 	patches.suse/net-usb-asix_devices-Fix-PHY-address-mask-in-MDIO-bu.patch
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
