--- a/series.conf
+++ b/series.conf
@@ -34153,6 +34153,7 @@
 	patches.suse/wifi-cw1200-cap-SSID-length-in-cw1200_do_join.patch
 	patches.suse/wifi-libertas-cap-SSID-len-in-lbs_associate.patch
 	patches.suse/wifi-cfg80211-sme-cap-SSID-length-in-__cfg80211_conn.patch
+	patches.suse/wifi-wilc1000-avoid-buffer-overflow-in-WID-string-co.patch
 	patches.suse/wifi-ath11k-fix-group-data-packet-drops-during-rekey.patch
 	patches.suse/ax25-properly-unshare-skbs-in-ax25_kiss_rcv.patch
 	patches.suse/pcmcia-Fix-a-NULL-pointer-dereference-in-__iodyn_fin.patch
