--- a/series.conf
+++ b/series.conf
@@ -11967,6 +11967,7 @@
 	patches.suse/can-etas_es58x-populate-ndo_change_mtu-to-prevent-bu.patch
 	patches.suse/can-hi311x-populate-ndo_change_mtu-to-prevent-buffer.patch
 	patches.suse/can-sun4i_can-populate-ndo_change_mtu-to-prevent-buf.patch
+	patches.suse/can-mcba_usb-populate-ndo_change_mtu-to-prevent-buff.patch
 
 	########################################################
 	# end of sorted patches
