--- a/series.conf
+++ b/series.conf
@@ -33642,6 +33642,7 @@
 	patches.suse/soc-qcom-mdt_loader-Ensure-we-don-t-read-past-the-EL.patch
 	patches.suse/soc-qcom-QMI-encoding-decoding-for-big-endian.patch
 	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
+	patches.suse/soc-qcom-mdt_loader-Fix-error-return-values-in-mdt_h.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 	patches.suse/mmc-rtsx_usb_sdmmc-Fix-error-path-in-sd_set_power_mo.patch
 	patches.suse/mmc-sdhci-msm-Ensure-SD-card-power-isn-t-ON-when-car.patch
