--- a/series.conf
+++ b/series.conf
@@ -11122,6 +11122,7 @@
 	patches.suse/coresight-tmc-Explicit-type-conversions-to-prevent-i.patch
 	patches.suse/coresight-trbe-Allocate-platform-data-per-device.patch
 	patches.suse/coresight-etm4x-Ensure-valid-drvdata-and-clock-before-clk_put.patch
+	patches.suse/coresight-Fix-memory-leak-in-acpi_buffer-pointer.patch
 	patches.suse/coresight-trbe-Fix-TRBE-potential-sleep-in-atomic-co.patch
 	patches.suse/dt-bindings-extcon-maxim-max77843-restrict-connector.patch
 	patches.suse/extcon-cht_wc-add-POWER_SUPPLY-dependency.patch
