--- a/series.conf
+++ b/series.conf
@@ -23429,6 +23429,7 @@
 	patches.suse/netfilter-nf_tables-GC-transaction-race-with-abort-p.patch
 	patches.suse/netfilter-nf_tables-use-correct-lock-to-protect-gc_l.patch
 	patches.suse/netfilter-nf_tables-defer-gc-run-if-previous-batch-i.patch
+	patches.suse/x86-MCE-Always-save-CS-register-on-AMD-Zen-IF-Poison-.patch
 	patches.suse/netfilter-allow-exp-not-to-be-removed-in-nf_ct_find_expect.patch
 	patches.suse/Bluetooth-Consolidate-code-around-sk_alloc-into-a-he.patch
 	patches.suse/net-sched-sch_hfsc-Ensure-inner-classes-have-fsc-cur.patch
