--- a/series.conf
+++ b/series.conf
@@ -22426,6 +22426,7 @@
 	patches.suse/cpu-SMT-Remove-topology_smt_supported.patch
 	patches.suse/cpu-SMT-Create-topology_smt_thread_allowed.patch
 	patches.suse/cpu-SMT-Allow-enabling-partial-SMT-states-via-sysfs.patch
+	patches.suse/x86-MCE-Always-save-CS-register-on-AMD-Zen-IF-Poison-.patch
 	patches.suse/x86-sev-Make-enc_dec_hypercall-accept-a-size-instead-of-npages
 	patches.suse/sched-rt-Fix-sysctl_sched_rr_timeslice-intial-value.patch
 	patches.suse/x86-cpu-fix-amd_check_microcode-declaration.patch
