--- a/series.conf
+++ b/series.conf
@@ -23433,6 +23433,7 @@
 	patches.suse/netfilter-nf_tables-defer-gc-run-if-previous-batch-i.patch
 	patches.suse/netfilter-allow-exp-not-to-be-removed-in-nf_ct_find_expect.patch
 	patches.suse/Bluetooth-Consolidate-code-around-sk_alloc-into-a-he.patch
+	patches.suse/wifi-mac80211_hwsim-drop-short-frames.patch
 	patches.suse/net-sched-sch_hfsc-Ensure-inner-classes-have-fsc-cur.patch
 	patches.suse/igb-set-max-size-RX-buffer-when-store-bad-packet-is-.patch
 	patches.suse/tty-n_gsm-require-CAP_NET_ADMIN-to-attach-N_GSM0710-.patch
