--- a/series.conf
+++ b/series.conf
@@ -23196,6 +23196,7 @@
 	patches.suse/NFSD-Cap-rsize_bop-result-based-on-send-buffer-size.patch
 	patches.suse/netfilter-conntrack-fix-the-gc-rescheduling-delay.patch
 	patches.suse/netfilter-conntrack-revisit-the-gc-initial-rescheduling-bi.patch
+	patches.suse/wifi-brcmfmac-fix-use-after-free-bug-in-brcmf_netdev.patch
 	patches.suse/Bluetooth-Normalize-HCI_OP_READ_ENC_KEY_SIZE-cmdcmpl.patch
 	patches.suse/mISDN-fix-use-after-free-bugs-in-l1oip-timer-handler.patch
 	patches.suse/bnx2x-fix-potential-memory-leak-in-bnx2x_tpa_stop.patch
