--- a/series.conf
+++ b/series.conf
@@ -11602,6 +11602,7 @@
 	patches.suse/netfilter-nf_tables-reject-duplicate-device-on-updates.patch
 	patches.suse/devlink-let-driver-opt-out-of-automatic-phys_port_na.patch
 	patches.suse/ixgbe-prevent-from-unwanted-interface-name-changes.patch
+	patches.suse/net-sched-ets-use-old-nbands-while-purging-unused-classes.patch
 	patches.suse/net-usb-asix_devices-add-phy_mask-for-ax88772-mdio-b.patch
 	patches.suse/ACPI-processor-perflib-Move-problematic-pr-performan.patch
 	patches.suse/soc-tegra-pmc-Ensure-power-domains-are-in-a-known-st.patch
