--- a/series.conf
+++ b/series.conf
@@ -23383,6 +23383,7 @@
 	patches.suse/media-dvb-core-Fix-kernel-WARNING-for-blocking-opera.patch
 	patches.suse/media-dvb-core-Fix-use-after-free-due-to-race-condit.patch
 	patches.suse/netfilter-nft_set_rbtree-fix-null-deref-on-element-i.patch
+	patches.suse/mm-fix-zswap-writeback-race-condition.patch
 	patches.suse/net-sched-flower-fix-possible-OOB-write-in-fl_set_ge.patch
 	patches.suse/vhost-use-kzalloc-instead-of-kmalloc-followed-by-mem.patch
 	patches.suse/net-sched-cls_u32-Fix-reference-counter-leak-leading.patch
