--- a/series.conf
+++ b/series.conf
@@ -23176,6 +23176,7 @@
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
 	patches.suse/mm-rmap-Fix-anon_vma-degree-ambiguity-leading-to-double-reuse.patch
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
+	patches.suse/Bluetooth-L2CAP-Fix-build-errors-in-some-archs.patch
 	patches.suse/USB-core-Prevent-nested-device-reset-calls.patch
 	patches.suse/media-mceusb-Use-new-usb_control_msg_-routines.patch
 	patches.suse/mm-pagewalk-Fix-race-between-unmap-and-page-walker.patch
