--- a/series.conf
+++ b/series.conf
@@ -21195,6 +21195,7 @@
 	patches.suse/can-kvaser_pciefd-Empty-SRB-buffer-in-probe.patch
 	patches.suse/can-kvaser_pciefd-Do-not-send-EFLUSH-command-on-TFD-.patch
 	patches.suse/can-kvaser_pciefd-Disable-interrupts-in-probe-error-.patch
+	patches.suse/mm-fix-zswap-writeback-race-condition.patch
 	patches.suse/nilfs2-fix-use-after-free-bug-of-nilfs_root-in-nilfs.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-L140AU.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-2nd-ASUS-GU603.patch
