--- a/series.conf
+++ b/series.conf
@@ -11883,6 +11883,7 @@
 	patches.suse/mm-damon-reclaim-avoid-divide-by-zero-in-damon_recla.patch
 	patches.suse/mm-memory-failure-fix-redundant-updates-for-already-poison.patch
 	patches.suse/percpu-fix-race-on-alloc-failed-warning-limit.patch
+	patches.suse/ocfs2-fix-recursive-semaphore-deadlock-in-fiemap-cal.patch
 	patches.suse/compiler-clang.h-define-__SANITIZE_-__-macros-only-w.patch
 	patches.suse/mm-damon-sysfs-fix-use-after-free-in-state_show.patch
 	patches.suse/btrfs-fix-squota-compressed-stats-leak.patch
