--- a/series.conf
+++ b/series.conf
@@ -34184,6 +34184,7 @@
 	patches.suse/Revert-SUNRPC-Don-t-allow-waiting-for-exiting-tasks.patch
 	patches.suse/SUNRPC-call-xs_sock_process_cmsg-for-all-cmsg.patch
 	patches.suse/NFSv4-flexfiles-Fix-layout-merge-mirror-check.patch
+	patches.suse/ocfs2-fix-recursive-semaphore-deadlock-in-fiemap-cal.patch
 	patches.suse/compiler-clang.h-define-__SANITIZE_-__-macros-only-w.patch
 	patches.suse/s390-pai-Deny-all-events-not-handled-by-this-PMU.patch
 	patches.suse/s390-cpum_cf-Deny-all-sampling-events-by-counter-PMU.patch
