--- a/series.conf
+++ b/series.conf
@@ -34189,6 +34189,7 @@
 	patches.suse/drm-amd-amdgpu-Fix-missing-error-return-on-kzalloc-f.patch
 	patches.suse/platform-x86-amd-pmc-Add-TUXEDO-IB-Pro-Gen10-AMD-to-.patch
 	patches.suse/hwmon-mlxreg-fan-Prevent-fans-from-getting-stuck-at-.patch
+	patches.suse/cifs-prevent-NULL-pointer-dereference-in-UTF16-conversion.patch
 	patches.suse/ACPI-IORT-Fix-memory-leak-in-iort_rmr_alloc_sids.patch
 	patches.suse/spi-spi-fsl-lpspi-Fix-transmissions-when-using-CONT.patch
 	patches.suse/spi-spi-fsl-lpspi-Set-correct-chip-select-polarity-b.patch
