--- a/series.conf
+++ b/series.conf
@@ -11655,6 +11655,7 @@
 	patches.suse/microchip-lan865x-fix-missing-Timer-Increment-config.patch
 	patches.suse/ixgbe-xsk-resolve-the-negative-overflow-of-budget-in.patch
 	patches.suse/igc-fix-disabling-L1.2-PCI-E-link-substate-on-I226-o.patch
+	patches.suse/net-sched-Make-cake_enqueue-return-NET_XMIT_CN-when-.patch
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
 	patches.suse/tls-fix-handling-of-zero-length-records-on-the-rx_list.patch
 	patches.suse/Octeontx2-af-Skip-overlap-check-for-SPI-field.patch
