--- a/series.conf
+++ b/series.conf
@@ -34057,6 +34057,7 @@
 	patches.suse/Bluetooth-hci_conn-do-return-error-from-hci_enhanced.patch
 	patches.suse/cdc_ncm-Flag-Intel-OEM-version-of-Fibocom-L850-GL-as.patch
 	patches.suse/net-usb-asix_devices-Fix-PHY-address-mask-in-MDIO-bu.patch
+	patches.suse/net-sched-Make-cake_enqueue-return-NET_XMIT_CN-when-.patch
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
 	patches.suse/tls-fix-handling-of-zero-length-records-on-the-rx_list.patch
 	patches.suse/netfilter-nf_reject-don-t-leak-dst-refcount-for-loopback-p.patch
