--- a/series.conf
+++ b/series.conf
@@ -24008,6 +24008,7 @@
 	patches.suse/netfilter-nf_tables-reject-duplicate-device-on-updates.patch
 	patches.suse/use-uniform-permission-checks-for-all-mount-propagat.patch
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
+	patches.suse/KVM-x86-use-array_index_nospec-with-indices-that-com.patch
 
 	########################################################
 	# end of sorted patches
