--- a/series.conf
+++ b/series.conf
@@ -23774,6 +23774,7 @@
 	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_notifi.patch
 	patches.suse/vsock-Do-not-allow-binding-to-VMADDR_PORT_ANY.patch
+	patches.suse/KVM-x86-use-array_index_nospec-with-indices-that-com.patch
 
 	########################################################
 	# end of sorted patches
