--- a/series.conf
+++ b/series.conf
@@ -24009,6 +24009,7 @@
 	patches.suse/use-uniform-permission-checks-for-all-mount-propagat.patch
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
 	patches.suse/dmaengine-idxd-Fix-refcount-underflow-on-module-unlo.patch
+	patches.suse/dmaengine-ti-edma-Fix-memory-allocation-size-for-que.patch
 
 	########################################################
 	# end of sorted patches
