--- a/series.conf
+++ b/series.conf
@@ -24007,6 +24007,7 @@
 	patches.suse/vsock-Do-not-allow-binding-to-VMADDR_PORT_ANY.patch
 	patches.suse/netfilter-nf_tables-reject-duplicate-device-on-updates.patch
 	patches.suse/use-uniform-permission-checks-for-all-mount-propagat.patch
+	patches.suse/net-smc-fix-UAF-on-smcsk-after-smc_listen_out.patch
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
 	patches.suse/dmaengine-idxd-Fix-refcount-underflow-on-module-unlo.patch
 	patches.suse/dmaengine-ti-edma-Fix-memory-allocation-size-for-que.patch
