--- a/series.conf
+++ b/series.conf
@@ -24120,6 +24120,7 @@
 	patches.suse/x86-mm-Fix-flush_tlb_range-when-used-for-zapping-normal-PM.patch
 	patches.suse/memstick-rtsx_usb_ms-Fix-slab-use-after-free-in-rtsx.patch
 	patches.suse/msft-hv-3208-scsi-storvsc-Don-t-report-the-host-packet-status-as-.patch
+	patches.suse/net-stmmac-Fix-accessing-freed-irq-affinity_hint.patch
 	patches.suse/ext4-ignore-xattrs-past-end.patch
 	patches.suse/ext4-fix-OOB-read-when-checking-dotdot-dir.patch
 	patches.suse/drm-vkms-Fix-use-after-free-and-double-free-on-init-.patch
