--- a/series.conf
+++ b/series.conf
@@ -23970,6 +23970,7 @@
 	patches.suse/ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
 	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
 	patches.suse/mm-hugetlb-unshare-page-tables-during-VMA-split-not-.patch
+	patches.suse/mm-hugetlb-fix-huge_pmd_unshare-vs-GUP-fast-race.patch
 	patches.suse/clone_private_mnt-make-sure-that-caller-has-CAP_SYS_.patch
 	patches.suse/do_change_type-refuse-to-operate-on-unmounted-not-ou.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
