--- a/series.conf
+++ b/series.conf
@@ -33383,6 +33383,7 @@
 	patches.suse/KVM-SVM-Reject-SEV-ES-intra-host-migration-if-vCPU-c.patch
 	patches.suse/KVM-x86-xen-Allow-out-of-range-event-channel-ports-i.patch
 	patches.suse/KVM-Allow-CPU-to-reschedule-while-setting-per-page-m.patch
+	patches.suse/msft-hv-3285-KVM-x86-hyper-v-Skip-non-canonical-addresses-during-.patch
 	patches.suse/KVM-x86-avoid-underflow-when-scaling-TSC-frequency.patch
 	patches.suse/netlink-Fix-wraparounds-of-sk-sk_rmem_alloc.patch
 	patches.suse/tipc-Fix-use-after-free-in-tipc_conn_close.patch
