--- a/series.conf
+++ b/series.conf
@@ -27102,6 +27102,7 @@
 	patches.suse/KVM-x86-Apply-Intel-s-TSC_AUX-reserved-bit-behavior-.patch
 	patches.suse/KVM-x86-Inhibit-code-DBs-in-MOV-SS-shadow-for-all-In.patch
 	patches.suse/KVM-SVM-Emulate-SYSENTER-RIP-RSP-behavior-for-all-In.patch
+	patches.suse/KVM-x86-Bury-guest_cpuid_is_amd_or_hygon-in-cpuid.c.patch
 	patches.suse/KVM-VMX-Switch-__vmx_exit-and-kvm_x86_vendor_exit-in.patch
 	patches.suse/KVM-nVMX-Add-a-helper-to-get-highest-pending-from-Po.patch
 	patches.suse/KVM-nVMX-Request-immediate-exit-iff-pending-nested-e.patch
