--- a/series.conf
+++ b/series.conf
@@ -29644,6 +29644,7 @@
 	patches.suse/KVM-x86-Fix-a-comment-inside-__kvm_set_or_clear_apic.patch
 	patches.suse/KVM-x86-AMD-s-IBPB-is-not-equivalent-to-Intel-s-IBPB.patch
 	patches.suse/KVM-x86-drop-x86.h-include-from-cpuid.h.patch
+	patches.suse/KVM-x86-Route-non-canonical-checks-in-emulator-throu.patch
 	patches.suse/KVM-arm64-Get-rid-of-userspace_irqchip_in_use.patch
 	patches.suse/KVM-arm64-Don-t-retire-aborted-MMIO-instruction.patch
 	patches.suse/KVM-arm64-vgic-its-Add-a-data-length-check-in-vgic_i.patch
