--- a/series.conf
+++ b/series.conf
@@ -27100,6 +27100,7 @@
 	patches.suse/KVM-x86-Limit-check-IDs-for-KVM_SET_BOOT_CPU_ID.patch
 	patches.suse/KVM-x86-pmu-Squash-period-for-checkpointed-events-ba.patch
 	patches.suse/KVM-x86-Apply-Intel-s-TSC_AUX-reserved-bit-behavior-.patch
+	patches.suse/KVM-x86-Inhibit-code-DBs-in-MOV-SS-shadow-for-all-In.patch
 	patches.suse/KVM-VMX-Switch-__vmx_exit-and-kvm_x86_vendor_exit-in.patch
 	patches.suse/KVM-nVMX-Add-a-helper-to-get-highest-pending-from-Po.patch
 	patches.suse/KVM-nVMX-Request-immediate-exit-iff-pending-nested-e.patch
