--- a/series.conf
+++ b/series.conf
@@ -5666,6 +5666,7 @@
 	patches.suse/irqchip-lan966x-oic-Make-CONFIG_LAN966X_OIC-depend-o.patch
 	patches.suse/irqchip-irq-mvebu-icu-Fix-access-to-msi_data-from-ir.patch
 	patches.suse/irqchip-apple-aic-Only-handle-PMC-interrupt-as-FIQ-w.patch
+	patches.suse/hrtimers-Force-migrate-away-hrtimers-queued-after-CP.patch
 	patches.suse/jiffies-Cast-to-unsigned-long-in-secs_to_jiffies-con.patch
 	patches.suse/platform-x86-intel-pmc-fix-ltr-decode-in-pmc_core_lt.patch
 	patches.suse/selftests-livepatch-handle-PRINTK_CALLER-in-check_re.patch
