--- a/series.conf
+++ b/series.conf
@@ -24015,6 +24015,7 @@
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
 	patches.suse/HID-asus-fix-UAF-via-HID_CLAIMED_INPUT-validation.patch
 	patches.suse/KVM-x86-use-array_index_nospec-with-indices-that-com.patch
+	patches.suse/Bluetooth-Fix-use-after-free-in-l2cap_sock_cleanup_l.patch
 	patches.suse/dmaengine-idxd-Fix-refcount-underflow-on-module-unlo.patch
 	patches.suse/dmaengine-ti-edma-Fix-memory-allocation-size-for-que.patch
 
