--- a/series.conf
+++ b/series.conf
@@ -18582,6 +18582,7 @@
 	patches.suse/s390-netiucv-Fix-return-type-of-netiucv_tx.patch
 	patches.suse/s390-lcs-Fix-return-type-of-lcs_start_xmit.patch
 	patches.suse/gve-Fix-error-return-code-in-gve_prefill_rx_pages.patch
+	patches.suse/igb-Do-not-free-q_vector-unless-new-one-was-allocate.patch
 	patches.suse/msft-hv-2704-net-mana-Fix-return-type-of-mana_start_xmit.patch
 	patches.suse/net-mana-Add-support-for-auxiliary-device.patch
 	patches.suse/net-mana-Record-the-physical-address-for-doorbell-pa.patch
