--- a/series.conf
+++ b/series.conf
@@ -16709,6 +16709,7 @@
 	patches.suse/Bluetooth-hci_sysfs-Fix-attempting-to-call-device_ad.patch
 	patches.suse/Bluetooth-hci_core-Fix-not-handling-link-timeouts-pr.patch
 	patches.suse/Bluetooth-L2CAP-Fix-user-after-free.patch
+	patches.suse/net-If-sock-is-dead-don-t-access-sock-s-sk_wq-in-sk_stream.patch
 	patches.suse/vhost-vsock-Use-kvmalloc-kvfree-for-larger-packets.patch
 	patches.suse/eth-alx-take-rtnl_lock-on-resume.patch
 	patches.suse/mISDN-fix-use-after-free-bugs-in-l1oip-timer-handler.patch
