--- a/series.conf
+++ b/series.conf
@@ -23203,6 +23203,7 @@
 	patches.suse/wifi-brcmfmac-fix-use-after-free-bug-in-brcmf_netdev.patch
 	patches.suse/Bluetooth-Normalize-HCI_OP_READ_ENC_KEY_SIZE-cmdcmpl.patch
 	patches.suse/Bluetooth-L2CAP-Fix-user-after-free.patch
+	patches.suse/net-If-sock-is-dead-don-t-access-sock-s-sk_wq-in-sk_stream.patch
 	patches.suse/mISDN-fix-use-after-free-bugs-in-l1oip-timer-handler.patch
 	patches.suse/bnx2x-fix-potential-memory-leak-in-bnx2x_tpa_stop.patch
 	patches.suse/r8152-Rate-limit-overflow-messages.patch
