--- a/series.conf
+++ b/series.conf
@@ -34225,6 +34225,7 @@
 	patches.suse/Bluetooth-Fix-use-after-free-in-l2cap_sock_cleanup_l.patch
 	patches.suse/batman-adv-fix-OOB-read-write-in-network-coding-deco.patch
 	patches.suse/net-smc-fix-one-NULL-pointer-dereference-in-smc_ib_i.patch
+	patches.suse/vxlan-Fix-NPD-in-arp-neigh-_reduce-when-using-nextho.patch
 	patches.suse/wifi-cw1200-cap-SSID-length-in-cw1200_do_join.patch
 	patches.suse/wifi-libertas-cap-SSID-len-in-lbs_associate.patch
 	patches.suse/wifi-cfg80211-sme-cap-SSID-length-in-__cfg80211_conn.patch
