--- a/series.conf
+++ b/series.conf
@@ -34096,6 +34096,7 @@
 	patches.suse/net-gso-Forbid-IPv6-TSO-with-extensions-on-devices-with-on.patch
 	patches.suse/cdc_ncm-Flag-Intel-OEM-version-of-Fibocom-L850-GL-as.patch
 	patches.suse/net-usb-asix_devices-Fix-PHY-address-mask-in-MDIO-bu.patch
+	patches.suse/gve-prevent-ethtool-ops-after-shutdown.patch
 	patches.suse/net-sched-Make-cake_enqueue-return-NET_XMIT_CN-when-.patch
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
 	patches.suse/tls-fix-handling-of-zero-length-records-on-the-rx_list.patch
