--- a/series.conf
+++ b/series.conf
@@ -34169,6 +34169,7 @@
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-LE910C4-WWX-new.patch
 	patches.suse/bnxt_en-Fix-memory-corruption-when-FW-resources-chan.patch
 	patches.suse/net-mlx5-Reload-auxiliary-drivers-on-fw_activate.patch
+	patches.suse/net-mlx5-Fix-lockdep-assertion-on-sync-reset-unload-.patch
 	patches.suse/msft-hv-3330-net-hv_netvsc-fix-loss-of-early-receive-events-from-.patch
 	patches.suse/net-rose-split-remove-and-free-operations-in-rose_re.patch
 	patches.suse/net-rose-convert-use-field-to-refcount_t.patch
