--- a/series.conf
+++ b/series.conf
@@ -29435,6 +29435,7 @@
 	patches.suse/net-ieee802154-do-not-leave-a-dangling-sk-pointer-in.patch
 	patches.suse/net-inet-do-not-leave-a-dangling-sk-pointer-in-inet_.patch
 	patches.suse/net-inet6-do-not-leave-a-dangling-sk-pointer-in-inet.patch
+	patches.suse/net-mlx5-Add-sync-reset-drop-mode-support.patch
 	patches.suse/octeontx2-pf-handle-otx2_mbox_get_rsp-errors-in-otx2.patch
 	patches.suse/octeontx2-pf-handle-otx2_mbox_get_rsp-errors-in-otx2-6.patch
 	patches.suse/octeontx2-pf-handle-otx2_mbox_get_rsp-errors-in-otx2-5.patch
