--- a/series.conf
+++ b/series.conf
@@ -11875,6 +11875,7 @@
 	patches.suse/batman-adv-fix-OOB-read-write-in-network-coding-deco.patch
 	patches.suse/net-smc-fix-one-NULL-pointer-dereference-in-smc_ib_i.patch
 	patches.suse/net-tcp-Fix-socket-memory-leak-in-TCP-AO-failure-han.patch
+	patches.suse/vxlan-Fix-NPD-when-refreshing-an-FDB-entry-with-a-nexthop-.patch
 	patches.suse/wifi-cw1200-cap-SSID-length-in-cw1200_do_join.patch
 	patches.suse/wifi-libertas-cap-SSID-len-in-lbs_associate.patch
 	patches.suse/wifi-cfg80211-sme-cap-SSID-length-in-__cfg80211_conn.patch
