--- a/series.conf
+++ b/series.conf
@@ -11935,6 +11935,7 @@
 	patches.suse/cpufreq-amd-pstate-Fix-a-regression-leading-to-EPP-0.patch
 	patches.suse/s390-pai-Deny-all-events-not-handled-by-this-PMU.patch
 	patches.suse/s390-cpum_cf-Deny-all-sampling-events-by-counter-PMU.patch
+	patches.suse/genetlink-fix-genl_bind-invoking-bind-after-EPERM.patch
 	patches.suse/can-j1939-implement-NETDEV_UNREGISTER-notification-h.patch
 	patches.suse/can-j1939-j1939_sk_bind-call-j1939_priv_put-immediat.patch
 	patches.suse/can-j1939-j1939_local_ecu_get-undo-increment-when-j1.patch
