--- a/series.conf
+++ b/series.conf
@@ -11881,6 +11881,7 @@
 	patches.suse/wifi-cfg80211-sme-cap-SSID-length-in-__cfg80211_conn.patch
 	patches.suse/wifi-wilc1000-avoid-buffer-overflow-in-WID-string-co.patch
 	patches.suse/wifi-ath11k-fix-group-data-packet-drops-during-rekey.patch
+	patches.suse/e1000e-fix-heap-overflow-in-e1000_set_eeprom.patch
 	patches.suse/ax25-properly-unshare-skbs-in-ax25_kiss_rcv.patch
 	patches.suse/nouveau-fix-disabling-the-nonstall-irq-due-to-storm-.patch
 	patches.suse/accel-ivpu-Prevent-recovery-work-from-being-queued-d.patch
