--- a/series.conf
+++ b/series.conf
@@ -23216,6 +23216,7 @@
 	patches.suse/HID-roccat-Fix-use-after-free-in-roccat_read.patch
 	patches.suse/scsi-stex-Properly-zero-out-the-passthrough-command-structure.patch
 	patches.suse/usb-mon-make-mmapped-memory-read-only.patch
+	patches.suse/kernfs-fix-use-after-free-in-__kernfs_remove.patch
 	patches.suse/gfs2-Check-sb_bsize_shift-after-reading-superblock.patch
 	patches.suse/9p-trans_fd-always-use-O_NONBLOCK-read-write.patch
 	patches.suse/fbdev-smscufx-Fix-use-after-free-in-ufx_ops_open.patch
