--- a/series.conf
+++ b/series.conf
@@ -23953,6 +23953,7 @@
 	patches.suse/net-openvswitch-fix-nested-key-length-validation-in-the-se.patch
 	patches.suse/net_sched-hfsc-Fix-a-UAF-vulnerability-in-class-handling.patch
 	patches.suse/net_sched-hfsc-Fix-a-potential-UAF-in-hfsc_dequeue-too.patch
+	patches.suse/KVM-x86-Reset-IRTE-to-host-control-if-new-route-isn-t-post.patch
 	patches.suse/net_sched-hfsc-Fix-a-UAF-vulnerability-in-class-with-netem.patch
 	patches.suse/sch_htb-make-htb_deactivate-idempotent.patch
 	patches.suse/netfilter-ipset-fix-region-locking-in-hash-types.patch
