--- a/series.conf
+++ b/series.conf
@@ -12148,6 +12148,7 @@
 	patches.suse/drm-mediatek-fix-potential-OF-node-use-after-free.patch
 	patches.suse/drm-panthor-validate-group-queue-count.patch
 	patches.suse/drm-xe-Attempt-to-bring-bos-back-to-VRAM-after-evict.patch
+	patches.suse/kernfs-Fix-UAF-in-polling-when-open-file-is-released.patch
 	patches.suse/regulator-sy7636a-fix-lifecycle-of-power-good-gpio.patch
 	patches.suse/Input-iqs7222-avoid-enabling-unused-interrupts.patch
 	patches.suse/Input-i8042-add-TUXEDO-InfinityBook-Pro-Gen10-AMD-to.patch
