--- a/series.conf
+++ b/series.conf
@@ -34313,6 +34313,7 @@
 	patches.suse/drm-amdgpu-vcn4-Fix-IB-parsing-with-multiple-engine-.patch
 	patches.suse/drm-amdgpu-vcn-Allow-limiting-ctx-to-instance-0-for-.patch
 	patches.suse/drm-mediatek-fix-potential-OF-node-use-after-free.patch
+	patches.suse/kernfs-Fix-UAF-in-polling-when-open-file-is-released.patch
 	patches.suse/regulator-sy7636a-fix-lifecycle-of-power-good-gpio.patch
 	patches.suse/Input-iqs7222-avoid-enabling-unused-interrupts.patch
 	patches.suse/Input-i8042-add-TUXEDO-InfinityBook-Pro-Gen10-AMD-to.patch
