--- a/series.conf
+++ b/series.conf
@@ -22106,6 +22106,7 @@
 	patches.suse/netfilter-nft_set_pipapo-fix-improper-element-remova.patch
 	patches.suse/netfilter-nf_tables-skip-bound-chain-in-netns-releas.patch
 	patches.suse/netfilter-nf_tables-skip-bound-chain-on-rule-flush.patch
+	patches.suse/Bluetooth-hci_event-call-disconnect-callback-before-.patch
 	patches.suse/drm-client-Fix-memory-leak-in-drm_client_target_clon.patch
 	patches.suse/drm-client-Fix-memory-leak-in-drm_client_modeset_pro.patch
 	patches.suse/drm-amd-display-check-TG-is-non-null-before-checking.patch
