--- a/series.conf
+++ b/series.conf
@@ -33872,6 +33872,7 @@
 	patches.suse/scsi-mvsas-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/scsi-isci-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/scsi-bfa-Double-free-fix.patch
+	patches.suse/scsi-libiscsi-Initialize-iscsi_conn-dd_data-only-if-memory.patch
 	patches.suse/RDMA-core-reduce-stack-using-in-nldev_stat_get_doit.patch
 	patches.suse/RDMA-hfi1-fix-possible-divide-by-zero-in-find_hw_thr.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-.patch
