--- a/blacklist.conf
+++ b/blacklist.conf
@@ -781,3 +781,4 @@ a943d76352dbb4707a5e5537bbe696c00f5ddd36 # bsc#1242745 kerneldoc fix
 a9685b409a03b73d2980bbfa53eb47555802d0a9 # CVE-2024-53177 https://bugzilla.suse.com/show_bug.cgi?id=1234896#c74
 cf5fb87fcdaaaafec55dcc0dc5a9e15ead343973 # CVE-2025-38678 bsc#1249126: not applicable
 41ddb251c68ac75c101d3a50a68c4629c9055e4c # CVE-2023-53437 https://bugzilla.suse.com/show_bug.cgi?id=1250178#c2
+fc0cba0c7be8261a1625098bd1d695077ec621c9 # CVE-2023-53322 https://bugzilla.suse.com/show_bug.cgi?id=1250323#c12
