--- a/series.conf
+++ b/series.conf
@@ -16648,6 +16648,7 @@
 	patches.suse/fs-dlm-fix-race-in-lowcomms.patch
 	patches.suse/fs-dlm-fix-race-between-test_bit-and-queue_work.patch
 	patches.suse/fs-dlm-handle-EBUSY-first-in-lock-arg-validation.patch
+	patches.suse/fs-dlm-fix-invalid-derefence-of-sb_lvbptr.patch
 	patches.suse/x86-mce-Retrieve-poison-range-from-hardware.patch
 	patches.suse/x86-microcode-Print-previous-version-of-microcode-af.patch
 	patches.suse/x86-microcode-amd-track-patch-allocation-size-explicitly.patch
