--- a/series.conf
+++ b/series.conf
@@ -23284,6 +23284,7 @@
 	patches.suse/timers-Split-try_to_-del_timer-_sync-to-prepare-for-.patch
 	patches.suse/timers-Add-shutdown-mechanism-to-the-internal-functi.patch
 	patches.suse/timers-Provide-timer_shutdown-_sync.patch
+	patches.suse/ACPICA-Fix-use-after-free-in-acpi_ut_copy_ipackage_to_ipackage.patch
 	patches.suse/ext4-fix-kernel-BUG-in-ext4_write_inline_data_end.patch
 	patches.suse/md-fix-a-crash-in-mempool_free.patch
 	patches.suse/media-dvb-core-Fix-UAF-due-to-refcount-races-at-rele.patch
