--- a/series.conf
+++ b/series.conf
@@ -34180,6 +34180,7 @@
 	patches.suse/drm-nouveau-fix-typos-in-comments.patch
 	patches.suse/iosys-map-Fix-undefined-behavior-in-iosys_map_clear.patch
 	patches.suse/drm-hisilicon-hibmc-fix-the-hibmc-loaded-failed-bug.patch
+	patches.suse/trace-fgraph-Fix-the-warning-caused-by-missing-unregister-.patch
 	patches.suse/usb-quirks-Add-DELAY_INIT-quick-for-another-SanDisk-.patch
 	patches.suse/usb-renesas-xhci-Fix-External-ROM-access-timeouts.patch
 	patches.suse/usb-core-hcd-fix-accessing-unmapped-memory-in-SINGLE.patch
