--- a/series.conf
+++ b/series.conf
@@ -11808,6 +11808,7 @@
 	patches.suse/drm-hisilicon-hibmc-fix-the-i2c-device-resource-leak.patch
 	patches.suse/drm-hisilicon-hibmc-fix-the-hibmc-loaded-failed-bug.patch
 	patches.suse/trace-fgraph-Fix-the-warning-caused-by-missing-unregister-.patch
+	patches.suse/ftrace-Fix-potential-warning-in-trace_printk_seq-during-ft.patch
 	patches.suse/usb-quirks-Add-DELAY_INIT-quick-for-another-SanDisk-.patch
 	patches.suse/usb-renesas-xhci-Fix-External-ROM-access-timeouts.patch
 	patches.suse/usb-core-hcd-fix-accessing-unmapped-memory-in-SINGLE.patch
