--- a/series.conf
+++ b/series.conf
@@ -10976,6 +10976,7 @@
 	patches.kernel.org/6.12.53-253-tee-fix-register_shm_helper.patch
 	patches.kernel.org/6.12.53-254-pinctrl-check-the-return-value-of-pinmux_ops-.patch
 	patches.kernel.org/6.12.53-255-bus-fsl-mc-Check-return-value-of-platform_get.patch
+	patches.kernel.org/6.12.53-256-net-9p-Fix-buffer-overflow-in-USB-transport-l.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
