--- a/series.conf
+++ b/series.conf
@@ -34261,6 +34261,7 @@
 	patches.suse/arm64-dts-imx8mp-Fix-missing-microSD-slot-vqmmc-on-DH-elec.patch
 	patches.suse/arm64-dts-imx8mp-Fix-missing-microSD-slot-vqmmc-on-Data-Mo.patch
 	patches.suse/arm64-dts-rockchip-Add-vcc-supply-to-SPI-flash-on-rk3399-p.patch
+	patches.suse/mm-slub-avoid-accessing-metadata-when-pointer-is-invalid-i.patch
 	patches.suse/wifi-cfg80211-fix-use-after-free-in-cmp_bss.patch
 	patches.suse/wifi-brcmfmac-fix-use-after-free-when-rescheduling-b.patch
 	patches.suse/wifi-mac80211-fix-incorrect-type-for-ret.patch
