--- a/series.conf
+++ b/series.conf
@@ -22039,6 +22039,7 @@
 	patches.suse/ftrace-Fix-possible-warning-on-checking-all-pages-used-in-ftrace_process_locs.patch
 	patches.suse/tracing-histograms-Add-histograms-to-hist_vars-if-they-have-referenced-variables.patch
 	patches.suse/tracing-Fix-memory-leak-of-iter-temp-when-reading-trace_pipe.patch
+	patches.suse/netfilter-conntrack-Avoid-nf_ct_helper_hash-uses-after-fre.patch
 	patches.suse/netfilter-nf_tables-do-not-ignore-genmask-when-looki.patch
 	patches.suse/netfilter-nf_tables-prevent-OOB-access-in-nft_byteor.patch
 	patches.suse/net-sched-cls_fw-Fix-improper-refcount-update-leads-.patch
